<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/search"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.SearchActivity">

    <!-- Declare Toolbar>-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white" />

    <EditText
        android:id="@+id/editText_Search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/search_query_term"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="18sp"
        android:backgroundTint="#26C6DA"/>

    <TextView
        android:id="@+id/tv_beginDate"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:text="@string/begin_date" />

    <TextView
        android:id="@+id/tv_endDate"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="160dp"
        android:text="@string/end_date" />

</RelativeLayout>